# DevSecOpsThon_Backend

./: .gitignore  Dockerfile  a.py  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
api/: db.py  main.py  reset_db.py
api/models/: user.py
api/routers/: clip.py  file.py  lmm.py  user.py
api/schemas/: user.py
frontend/: Dockerfile  main.py
llm/: api.py  chat.py  clip.py  document_loader.py  embeddings.py  llm_pipeline.py  main1_1.py  main1_2.py  main1_3.py  qa_system.py  text_processing.py  vector_stores.py
llm/csv/: output.csv
nginx/: nginx.conf
